--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,31 @@ body {
     background-size: cover;
     height: auto;
     width: 100%;
-    overflow: hidden;
 }
 
-h5 {
+.jumbotron {
+    color: honeydew;
+    background-image: url('../images/Turtletime.jpg');
+    font-size: x-large;
+    
+}
+
+#startGame {
+    background-color: green;
+    color: honeydew;
+}
+
+
+
+header {
+    /* background-color: black;  */
+    color: cornsilk;
+    font-size: 50px;
+    margin-left: 620px;
+    width: fit-content;
+}
+
+#results {
     /* background-color: black;  */
     color: cornsilk;
     font-size: 50px;
@@ -36,4 +57,8 @@ p {
     font-size: xx-large;
     margin-left: 502px;
     margin-top: 100px;
+}
+
+h4 {
+    color: honeydew;
 }
